CL: - Updated CMakeFiles from:   - content_manager   - indexer_connector   - router   - vulnerability_scanner - In order to compile each project in a separate manner - WIP: component tests for the router are failing

--- a/src/Makefile
+++ b/src/Makefile
@@ -1317,13 +1317,8 @@ EXTERNAL_RES := cJSON curl libdb libffi libyaml openssl procps sqlite zlib audit
 ifneq (${TARGET},agent)
 ifneq (${TARGET},winagent)
 	# Manager extra dependency
-	EXTERNAL_RES += $(CPYTHON) jemalloc
+	EXTERNAL_RES += $(CPYTHON) jemalloc rocksdb
 endif
-endif
-
-ifeq (${TARGET},server)
-	# Server extra dependency
-	EXTERNAL_RES += rocksdb
 endif
 
 EXTERNAL_DIR := $(EXTERNAL_RES:%=external/%)
