--- a/src/shared_modules/content_manager/CMakeLists.txt
+++ b/src/shared_modules/content_manager/CMakeLists.txt
@@ -4,10 +4,27 @@ project(content_manager)
 
 enable_testing()
 
+get_filename_component(SRC_FOLDER     ${CMAKE_SOURCE_DIR}/../../ ABSOLUTE)
+get_filename_component(SHARED_MODULES ${SRC_FOLDER}/shared_modules/ ABSOLUTE)
+
+# Include directories
 include_directories(include)
-include_directories(${SRC_FOLDER}/shared_modules)
-include_directories(${SRC_FOLDER}/shared_modules/content_manager/tests)
-include_directories(${SRC_FOLDER}/shared_modules/content_manager/src/components)
+
+include_directories(${SRC_FOLDER})
+include_directories(${SRC_FOLDER}/headers)
+include_directories(${SRC_FOLDER}/external/nlohmann)
+include_directories(${SRC_FOLDER}/external/curl/include/curl)
+
+include_directories(${SHARED_MODULES})
+include_directories(${SHARED_MODULES}/utils)
+include_directories(${SHARED_MODULES}/router/include)
+include_directories(${SHARED_MODULES}/wazuh-http-request/include)
+include_directories(${SHARED_MODULES}/content_manager/src/components)
+
+# Link directories
+link_directories(${SRC_FOLDER}/external/curl/lib/.libs)
+link_directories(${SHARED_MODULES}/router/build)
+link_directories(${SHARED_MODULES}/wazuh-http-request/build)
 
 file(GLOB CONTENT_DOWNLOAD_SRC
     "src/*.cpp"
@@ -17,7 +34,7 @@ add_library(content_manager SHARED
     ${CONTENT_DOWNLOAD_SRC}
     )
 
-target_link_libraries(content_manager router urlrequest gcc_s)
+target_link_libraries(content_manager router urlrequest gcc_s curl)
 
 set_target_properties(content_manager PROPERTIES
         BUILD_RPATH_USE_ORIGIN TRUE
