--- a/src/shared_modules/router/tests/CMakeLists.txt
+++ b/src/shared_modules/router/tests/CMakeLists.txt
@@ -1,4 +1,9 @@
 cmake_minimum_required(VERSION 3.12.4)
 
-add_subdirectory(benchmark)
+include_directories(${SRC_FOLDER}/external/googletest/googletest/include/)
+include_directories(${SRC_FOLDER}/external/googletest/googlemock/include/)
+
+link_directories(${SRC_FOLDER}/external/googletest/lib/)
+
+#add_subdirectory(benchmark)
 add_subdirectory(component)
