Configuration management developed for the vulnerability detection module

--- a/src/unit_tests/wazuh_modules/CMakeLists.txt
+++ b/src/unit_tests/wazuh_modules/CMakeLists.txt
@@ -18,6 +18,7 @@ if(${TARGET} STREQUAL "server")
   add_subdirectory(oscap)
   add_subdirectory(sca)
   add_subdirectory(scheduling)
+  add_subdirectory(vulnerability_detection)
   add_subdirectory(vulnerability_detector)
   add_subdirectory(task_manager)
   add_subdirectory(agent_upgrade)
