--- a/src/Makefile
+++ b/src/Makefile
@@ -2640,6 +2640,7 @@ clean-internals: clean-unit-tests
 	rm -rf $(RSYNC)build
 	rm -rf $(SYSCOLLECTOR)build
 	rm -rf $(SHARED_MODULES)utils/flatbuffers/include/
+	rm -rf $(wildcard $(VULNERABILITY_SCANNER)/include/*_generated.h)
 	rm -rf $(SYSINFO)build
 	rm -rf $(SYSCHECK)build
 	rm -rf ${SHARED_MODULES}http-request/build
