--- a/api/api/spec/spec.yaml
+++ b/api/api/spec/spec.yaml
@@ -18947,6 +18947,7 @@ paths:
     put:
       tags:
         - Vulnerability
+      deprecated: true
       summary: "Run vulnerability detector scan"
       description: "Run a vulnerability detector scan in all nodes"
       operationId: api.controllers.vulnerability_controller.run_vulnerability_scan
@@ -18988,6 +18989,7 @@ paths:
     get:
       tags:
         - Vulnerability
+      deprecated: true
       summary: "Get vulnerabilities"
       description: "Return the vulnerabilities of an agent"
       operationId: api.controllers.vulnerability_controller.get_vulnerability_agent
@@ -19071,6 +19073,7 @@ paths:
     get:
       tags:
       - Vulnerability
+      deprecated: true
       summary: "Get last scan datetime"
       description: "Return when the last full and partial vulnerability scan of a specified agent ended."
       operationId: api.controllers.vulnerability_controller.get_last_scan_agent
@@ -19117,6 +19120,7 @@ paths:
     get:
       tags:
         - Vulnerability
+      deprecated: true
       summary: "Get agent vulnerabilities' field summary"
       description: "Return a summary of the vulnerabilities' field of an agent"
       operationId: api.controllers.vulnerability_controller.get_vulnerabilities_field_summary
